# ukge-smartwater2022

./: README.md  pyproject.toml  requirements.txt
data/water/: train.tsv  val.tsv
run/: run.py
src/: data.py  model.pkl  plot_confusion_matrix.py  prepdata.py  test_data.py  testers.py  train-svm.py
src/ukge_msellami.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ukge_msellami/ukge_msellami_tn.egg-info/: SOURCES.txt  top_level.txt
src/ukge_msellami_tn.egg-info/: PKG-INFO  SOURCES.txt
trained_models/water/logi_1017/: idx_concept.csv  idx_relation.csv  model.bin-10.data-00000-of-00001  model.bin-10.index
trained_models/water/rect_1017/: idx_concept.csv  idx_relation.csv  model.bin-10.index  model.bin-100.index  model.bin.data-00000-of-00001  trainig_loss.csv  val_loss.csv
trained_models/water/rect_1024/: model.bin.data-00000-of-00001  model.bin.index  trainig_loss.csv  val_loss.csv
trained_models/water/rect_1025/: model.bin-100.data-00000-of-00001  model.bin-100.index  model.bin.data-00000-of-00001  model.bin.index  trainig_loss.csv  val_loss.csv
trained_models/water/rect_1030/: idx_concept.csv  idx_relation.csv  model.bin.data-00000-of-00001  model.bin.index  trainig_loss.csv  val_loss.csv
