
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ukge_msellami"
version = "0.0.2"
authors = [
  { name="Sellami Mokhtar", email="mokhtar.sellami@gmail.com" },
]
description = "Embedding Uncertain Knowledge Graphs package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/msellamiTN/ukge_smartwater"
"Bug Tracker" = "https://github.com/msellamiTN/ukge_smartwater/issues"
